[gd_scene load_steps=11 format=3 uid="uid://ds1bb3oh6akpf"]

[ext_resource type="Script" uid="uid://c8ier7k2ohfsp" path="res://addons/abyss_history_lib/Class/Interact/InteractiveClass.gd" id="1_pf086"]
[ext_resource type="Material" uid="uid://do55163v32q4u" path="res://Resources/Material/Wood.tres" id="3_r0cfm"]
[ext_resource type="Script" uid="uid://7sv6f5llxudh" path="res://Resources/Object/Building/Door/PlainDoor/DoorInteraction.gd" id="3_ug2ta"]
[ext_resource type="Shader" uid="uid://chmfx8vng2i2v" path="res://Resources/Shader/recolor.gdshader" id="5_br3hc"]
[ext_resource type="Material" uid="uid://b860lbxbd3ed6" path="res://Resources/Material/GrayMaterial.tres" id="5_x7lst"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m5r1b"]
render_priority = -10
shader = ExtResource("5_br3hc")
shader_parameter/color = Color(0, 0, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_f3de0"]
size = Vector3(1.2, 2.4, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_pcbij"]
size = Vector3(0.1, 0.2, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_byqrf"]
size = Vector3(1.2, 2.4, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_pdnkw"]
size = Vector3(1.2, 2.4, 2)

[node name="DoorPlate" type="Node3D"]
script = ExtResource("1_pf086")
DisplayName = "Door"
Interactable = true
interact_text = "interact.open"
Switchable = true
current_health = 100.0

[node name="Body" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0, 0)
collision_layer = 24
collision_mask = 15
script = ExtResource("3_ug2ta")

[node name="Hinge" type="Node3D" parent="Body"]

[node name="Mesh" type="MeshInstance3D" parent="Body/Hinge"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 1.2, 0)
material_override = ExtResource("3_r0cfm")
material_overlay = SubResource("ShaderMaterial_m5r1b")
mesh = SubResource("BoxMesh_f3de0")
skeleton = NodePath("../..")

[node name="Handle" type="MeshInstance3D" parent="Body/Hinge"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.1, 0)
material_override = ExtResource("5_x7lst")
mesh = SubResource("BoxMesh_pcbij")
skeleton = NodePath("../..")

[node name="LockTipF" type="Label3D" parent="Body/Hinge"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0.11)
modulate = Color(1, 1, 1, 0)
text = "ðŸ”’"
font_size = 50
outline_size = 0

[node name="LockTipB" type="Label3D" parent="Body/Hinge"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -0.11)
modulate = Color(1, 1, 1, 0)
text = "ðŸ”’"
font_size = 50
outline_size = 0

[node name="CollisionShape" type="CollisionShape3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 1.2, 0)
shape = SubResource("BoxShape3D_byqrf")

[node name="AutoOpenArea" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="AutoOpenArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("BoxShape3D_pdnkw")

[connection signal="interact_signal" from="." to="Body" method="_interact_signal"]
[connection signal="area_entered" from="AutoOpenArea" to="Body" method="_on_auto_open_area_area_entered"]
[connection signal="area_exited" from="AutoOpenArea" to="Body" method="_on_auto_open_area_area_exited"]
